--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Vaishali Mediga's Portfolio</h1>
     <h2>I am a Web Developer</h2>
     <hr />
-    <a href="./public/about.html"> Birthday Invite Project</a>
+    <a href="./public/birthday-invite.html"> Birthday Invite Project</a>
     <img src="./assets/images/Screenshot 2024-03-24 120641.png" />
     <hr />
     <a href="./public/movie-ranking.html" >Movie ranking Project</a>
