--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Vaishali Mediga's Portfolio</h1>
     <h2>I am a Web Developer</h2>
     <hr />
-    <a href="./public/birthday-invite.html"> Birthday Invite Project</a>
-    <img src="./assets/images/Screenshot 2024-03-24 120641.png" />
+    <a href="birthday-invite.html"> Birthday Invite Project</a>
+    <img src="Screenshot 2024-03-24 120641.png" />
     <hr />
-    <a href="./public/movie-ranking.html" >Movie ranking Project</a>
-    <img src="./assets/images/Screenshot 2024-03-24 120520.png" />
+    <a href="movie-ranking.html" >Movie ranking Project</a>
+    <img src="Screenshot 2024-03-24 120520.png" />
     <hr />
-    <a href="./public/contact.html">Contact Me Here</a>
+    <a href="contact.html">Contact Me Here</a>
     <hr />
-    <a href="./public/about.html">More about me</a>
+    <a href="about.html">More about me</a>
     <hr />
 </body>
 </html>
